manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netcats
  labels:
    app: netcats
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netcats
  template: 
    metadata:
      labels:
        app: netcats
    spec:
      containers:
      - name: netcats-container
        image: "hattan/netcats:0.2"
        imagePullPolicy: Never
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
