manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: netcats-service
spec:
 type: NodePort
 ports:
   - port: 80
     targetPort: 80
     protocol: TCP
 selector:
   app: netcats
